# nightfeed

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py  wsgi.py
.github/workflows/: docker-publish.yml
rss_site_bridge/: app.py
rss_site_bridge/templates/: base.html  compose.html  detail.html  index.html  notifications.html  safe_browser.html  settings.html  xml_view.html
tests/: test_app.py
