[project]
name = "nightfeed"
version = "0.1.0"
description = "Save site extraction profiles and publish RSS feeds from topic listing pages."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "Flask>=3.1.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.53.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["rss_site_bridge*"]

[tool.setuptools.package-data]
rss_site_bridge = ["templates/*.html"]

[build-system]
requires = ["setuptools>=68.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"
